
  o New function stresstest_exercise() for "stress testing" of exercises,
    i.e., rerunning the exercise many times and capturing how the outcome
    depends on the simulated input parameters.

  o New (and still somewhat experimental) function match_exams_call()
    that can be employed to query which exams2xyz() function was called
    to create a certain exercise/exam.


Changes in Version 2.2-0

  o Added first release version of exams2blackboard(). This is essentially
    based on exams2qti12() but incorporates Blackboard's own flavor of
    QTI 1.2. It is still likely to change due to improvements in future
    versions. After uploading a test into Blackboard the material will
    appear under "Course Tools": The test will be available in "Tests"
    and each pool within the test will also appear in "Pools".

  o Added a new convenience function include_supplement() which facilitates
    including static supplement files (e.g., graphics or datasets). This
    essentially just calls file.copy() but facilitates finding supplement
    files that are available along with the .Rnw/.Rmd exercise files.

  o xweave() gained an extra argument svg=FALSE to optionally produce scalable
    vector graphics (SVG) instead of PNG for later rendering into HTML. All
    HTML-based exams2xyz() functions gained an svg=FALSE argument that can be
    set to TRUE to produce SVG instead of PNG. Base64 encoding is also used
    for SVG graphics by default.

  o xweave() gained an argument engine=NULL that can optionally be set to
    engine="knitr" to enable processing Rnw exercises by knitr::knit() instead
    of the default utils::Sweave().

  o exams2nops() now supports registration IDs with more than 7 digits.
    Up to now, 7 digits were hard-coded but now values of 8, 9, or 10 are
    also possible by setting the argument "reglength" in exams2nops()
    accordingly.

  o In exams2nops() the argument 'blank' can now be a vector of length 2