@@ -1,6 +1,6 @@
 Package: exams
 Version: 2.2-1
-Date: 2016-11-11
+Date: 2016-12-02
 Title: Automatic Generation of Exams in R
 Authors@R: c(person(given = "Achim", family = "Zeileis", role = c("aut", "cre"), email = "Achim.Zeileis@R-project.org"),
              person(given = "Bettina", family = "Gruen", role = "aut", email = "Bettina.Gruen@jku.at"),
