@@ -21,7 +21,7 @@ make_exercise_transform_pandoc <- function(to = "latex", base64 = to != "latex",
     	c("\\\\end\\{Soutput}",   "\\\\end{verbatim}"),
     	c("\\\\begin\\{Schunk}",  ""),
     	c("\\\\end\\{Schunk}",    ""),
-    	c("\\\\textit\\{",    "\\\\emph{")
+    	c("\\\\textit\\{",    "\\\\emph{"),
     	c("\\\\textnormal\\{",    "\\\\text{")
     )
     for(i in 1:nrow(tab)) x <- gsub(tab[i,1L], tab[i,2L], x)
