@@ -8,6 +8,9 @@ Changes in Version 2.2-1
     that can be employed to query which exams2xyz() function was called
     to create a certain exercise/exam.
 
+  o Started exams2ilias() function which is essentially a convenience
+    wrapper to exams2qti12() plus a custom template.
+
 
 Changes in Version 2.2-0
 
